--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1>ovo je heder i nas git</h1>
+    <p>Paragraf o tomo kako sam ja kul i super i igram fortnajt sa narutom uwuu ara ara gensin igrac momenat</p>
 </body>
 
 
