--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <title>titl</title>
 </head>
 <body>
-    <h1>ovo je heder i nas git</h1>
+    <header><h1>ovo je heder i nas git</h1></header>
     <p>Paragraf o tomo kako sam ja kul i super i igram fortnajt sa narutom uwuu ara ara gensin igrac momenat</p>
 </body>
 
