--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -68,7 +68,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Hrana</a> 
+                            <a href="">Više</a> 
                         </div>
                     </div>
                 </div>
