--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -51,7 +51,7 @@
                     <p class="naslov"> Prijavi se</p>
                     <input type="text" placeholder="User" class="input" >
                     <input type="password" placeholder="Password" class="input">
-                    <a href="" class="zaboravljena">Zaboravili ste lozinku?</a>
+                    <a href="#" onclick="alert('sucks to suck')" class="zaboravljena">Zaboravili ste lozinku?</a>
 
                     <button class="btn" >Prijavi se</button>
 
