--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -11,6 +11,9 @@
             rel="stylesheet"
                 href="https://fonts.googleapis.com/icon?family=Material+Icons"
                     >
+        
+
+        <script src="java/zablog.js"></script>
     </head>
     <body>
         <header class="glava flex">
@@ -34,7 +37,7 @@
                        
                         <a href="login.html" class="pom"> Login</a>
 
-                        <a href="login.html"> <svg  style="position: absolute; top:4px" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-man" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <a href="login.html"> <svg  style="position: absolute; top:4px ; fill:none" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-man" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"  stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <circle cx="12" cy="5" r="2" />
                             <path d="M10 22v-5l-1 -1v-4a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v4l-1 1v5" />
@@ -59,7 +62,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: bla;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -68,7 +71,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Više</a> 
+                            <font> Ime jela</font>
                         </div>
                     </div>
                 </div>
@@ -82,7 +85,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: bla;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -91,7 +94,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Više</a> 
+                            <font> Ime jela</font>
                         </div>
                     </div>
                 </div>
@@ -105,7 +108,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: bla;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -114,7 +117,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Više</a> 
+                            <font> Ime jela</font>
                         </div>
                     </div>
                 </div>
@@ -128,7 +131,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: bla;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -137,7 +140,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Više</a> 
+                            <font> Ime jela</font>
                         </div>
                     </div>
                 </div>
@@ -151,7 +154,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: bla;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg class="prst" id="prsti" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -160,7 +163,7 @@
                         </div>
 
                         <div class="pogleda">
-                            <a href="">Više</a> 
+                            <font> Ime jela</font>
                         </div>
                     </div>
                 </div>
