--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -23,8 +23,8 @@
 
             <nav>
                 <ul class="meni flex">
-                    <li><a href="" class="debelo">About</a></li>
-                    <li><a href="" class="debelo ">Preporuka</a></li>
+                    <li><a href="about.html" class="debelo">About</a></li>
+                    <li><a href="preporuka.html" class="debelo ">Preporuka</a></li>
                     <li><a href="blog.html" class="debelo ">Blog</a></li>
                     <li class="login">
                        
