--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -47,17 +47,17 @@
         <div class="kontejner" id="radi">
 
             <div class="kont" >
-                <form action="" class="form" id="form1"> 
+                <form action="" class="form" id="form1" onsubmit="login(event)"> 
                     <p class="naslov"> Prijavi se</p>
                     <input type="text" placeholder="User" class="input" >
                     <input type="password" placeholder="Password" class="input">
                     <a href="#" onclick="alert('sucks to suck')" class="zaboravljena">Zaboravili ste lozinku?</a>
 
-                    <button class="btn" >Prijavi se</button>
+                    <button class="btn">Prijavi se</button>
 
                 </form>
             </div>
         </div>
-        
+        <script src="login.js"></script>
     </body>
 </html>
