--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
         <title>Buzz Food</title>
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body>
+    <body background="../Frontend/images/indeks.jpg">
         <header class="glava flex">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
@@ -47,7 +47,7 @@
         
             <td style="width: 20%;"></td>
             <td style="width: 60%;" >
-
+              <div class="idegasamongas" style="padding: 0%;">
                 <div class="slideshow-container">
                     <div class="mySlides fade">
                       <div class="numbertext">1 / 3</div>
@@ -65,6 +65,7 @@
                       <div class="text"></div>
                     </div>
                   </div>
+                </div>
                   <br>
 
 
