--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -51,17 +51,20 @@
                 <div class="slideshow-container">
                     <div class="mySlides fade">
                       <div class="numbertext">1 / 3</div>
-                      <img src="../Frontend/images/bazfud.jpg" style="width:100%; height: 500px;">
+                      <img src="../Frontend/images/bazfud.jpg" style="width:100%; height: 500px;    vertical-align: middle;
+                      border-radius: 15px;">
                       <div class="text"></div>
                     </div>
                     <div class="mySlides fade">
                       <div class="numbertext">2 / 3</div>
-                      <img src="../Frontend/images/pozadina.jpg" style="width:100%; height: 500px;">
+                      <img src="../Frontend/images/pozadina.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+                      border-radius: 15px;">
                       <div class="text"></div>
                     </div>
                     <div class="mySlides fade">
                       <div class="numbertext">3 / 3</div>
-                      <img src="../Frontend/images/indeks.jpg" style="width:100%; height: 500px;">
+                      <img src="../Frontend/images/indeks.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+                      border-radius: 15px;">
                       <div class="text"></div>
                     </div>
                   </div>
