--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -30,9 +30,9 @@
 
             <nav>
                 <ul class="meni flex">
-                    <li><a href="about.html" class="debelo">About us</a></li>
+                    <li><a href="blog.html" class="debelo ">Blog</a></li>
                     <li><a href="preporuka.html" class="debelo ">Preporuka</a></li>
-                    <li><a href="" class="debelo ">Blog</a></li>
+                    <li><a href="about.html" class="debelo">About us</a></li>
                     <li class="login">
                        
                         <a href="login.html" class="pom"> Login</a>
