--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -80,5 +80,9 @@
         i svake godine donira 100% svoje zarade u dobrotvorne svrhe.<br>
         <i>-Vladimir Putin, 2021</i>
        </div>
+       
+  <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%); bottom: 0px; position: absolute; width: 100%;">
+    Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
+</footer>
     </body>
 </html>
