--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -170,5 +170,8 @@
                
         </div>
 
+        <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%);">
+            Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
+        </footer>
     </body>
 </html>
