--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -70,5 +70,9 @@
         </div>
     
         <script src="login.js"></script>
+        
+  <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%);">
+    Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
+</footer>
     </body>
 </html>
