--- a/Frontend/preporuka.html
+++ b/Frontend/preporuka.html
@@ -101,6 +101,9 @@
 
 
 
+  <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%); bottom: 0px; position: absolute; width: 100%;">
+    Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
+</footer>
 
     </body>
 </html>
