--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <img src="../Frontend/images/indeks.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+          <img src="../Frontend/images/card1.jpg" style="width:100%; height: 500px;     vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
@@ -137,7 +137,7 @@
         slideIndex = 1
       }
       slides[slideIndex - 1].style.display = "block";
-      setTimeout(showSlides, 10000); // Change image every 2 seconds
+      setTimeout(showSlides, 7000); // Change image every 2 seconds
     }
   </script>
 </body>
