blog pozadina i login animacije olaksane

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -64,7 +64,7 @@
 
             <div id="box" class="neradi" style= "display:none; width: 300px; height: 350px; position: absolute; background-color: transparent; z-index: 9; box-shadow: 0 0 0 3px red; border-radius: 10px; ">
                 <p id="pogresni" style="display:none ;  position: absolute; color: hsl(0, 100%, 50%); left: 15%; font-weight: bold; font-size:14px ;letter-spacing:1px;top: 25%;z-index: 999;transform: scale(1.15); ">Uneli ste pogrešne podatke!</p>
-                <p id="prazni" style="  display: none; position: absolute; color: hsl(0, 100%, 50%); left: 15%; font-weight: bold; font-size:14px ;letter-spacing:1px;top: 25%;z-index: 999;transform: scale(1.15); ">Molim Vas unesite podatke!</p>
+                <p id="prazni" style="  display: none; position: absolute; color: hsl(0, 100%, 50%); left: 15%; font-weight: bold; font-size:14px ;letter-spacing:1px;top: 25%;z-index: 999;transform: scale(1.15); ">Molimo Vas unesite podatke!</p>
             </div>
            
         </div>
