--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -80,31 +80,20 @@
 
     <div>
       <div class="idegasamongas">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Vivamus bibendum lacus finibus augue efficitur, et cursus urna placerat.
-        Suspendisse in vehicula dui, vitae malesuada nisl.
-        Aliquam erat nisl, tristique non risus non, facilisis pulvinar nisl.
-        Sed placerat magna lacus, fermentum feugiat tellus consectetur a.
-        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-        Donec nec metus ipsum. Aliquam erat volutpat.
-        Suspendisse in vehicula dui, vitae malesuada nisl.
-        Aliquam erat nisl, tristique non risus non, facilisis pulvinar nisl.
+        <h1>Dobrodošli na BuzzFood</h1> <br><h3>Najvecu socijalnu mrezu hrane</h3>
+        Buzzfood je vodeća svetska nezavisna kompanija za digitalne medije, koja koristi podatke i inovacije kako bi dosegla stotine miliona ljudi na globalnoj razmeri.
+        Naša masivna mreža na više platformi uključuje: BuzzFood Originals, koji stvara članke, popise, kvizove i videozapise; 
+        BuzzFood Media Brands, koji se sastoji od portfelja lifestyle brandova vođenih identitetom.
+        BuzzFood Studios, koji proizvodi izvorni sadržaj na televizijskim, kablovskim, SVOD, filmskim i digitalnim platformama; 
+        i BuzzFood News i FoodPost, koji uključuju izveštavanje svetske klase i istraživačko novinarstvo. 
+        Firma takođe uključuje BuzzFood Commerce, koji razvija proizvode i iskustva, kao i licenciranje i druga strateška partnerstva.
+
 
         <br><br>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Vivamus bibendum lacus finibus augue efficitur, et cursus urna placerat.
-        Suspendisse in vehicula dui, vitae malesuada nisl.
-        Aliquam erat nisl, tristique non risus non, facilisis pulvinar nisl.
-        Sed placerat magna lacus, fermentum feugiat tellus consectetur a.
-        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-        Donec nec metus ipsum. Aliquam erat volutpat.
-        Nulla ut tellus eu sem lacinia eleifend eu in neque.
-        Suspendisse in vehicula dui, vitae malesuada nisl.
-        Suspendisse in vehicula dui, vitae malesuada nisl.
-        Aliquam erat nisl, tristique non risus non, facilisis pulvinar nisl.
-        Sed placerat magna lacus, fermentum feugiat tellus consectetur a.
-        Aliquam erat nisl, tristique non risus non, facilisis pulvinar nisl.
-        Sed placerat magna lacus, fermentum feugiat tellus consectetur a.
+        Upravljamo globalnom novinarskom organizacijom sa sedištem u New Yorku i zabavnim studijem sa sedištem u Los Angelesu, s globalnim urednicima u zemljama širom sveta. 
+        Naš najbolji rad stvara autentičan angažman publike koji podstice uticaj u stvarnom svetu, kao što su špageti ili makaroni, zloglasna eksplodirajuća lubenica,
+        nagrađivane istrage buzzfood clanaka i naše glavne liste i kvizovi.
+
       </div>
     </div>
     
