--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -42,6 +42,7 @@
                
             </nav>
         </header>
+        <div class="kontejner">
     <br><br><br><br><br><br><br>    
        <div class="idegasamongas">
         Kompanija Buzzfood je osnovana 2021. sa jednim ciljem,
@@ -80,8 +81,8 @@
         i svake godine donira 100% svoje zarade u dobrotvorne svrhe.<br>
         <i>-Vladimir Putin, 2021</i>
        </div>
-       
-  <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%); bottom: 0px; position: absolute; width: 100%;">
+       </div>>
+  <footer style="background-color:  #dc0701; color:var(--zuta);">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
     </body>
