--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -71,7 +71,7 @@
     
         <script src="login.js"></script>
         
-  <footer style="background-color:  #dc0701; color:hsl(51, 84%, 70%);">
+  <footer style="background-color:  #dc0701;  color:var(--zuta);">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
     </body>
