--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -62,7 +62,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg  onclick="myfunction('prst5')" id="prst5" class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -85,7 +85,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg onclick="myfunction('prst4')" id="prst4" class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -108,7 +108,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg  onclick="myfunction('prst3')" id="prst3" class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -131,7 +131,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg id="prst2" onclick="myfunction('prst2')" class="prst" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -154,7 +154,7 @@
                     <div class="info">
                         <div class="lajkovi">
 
-                            <svg class="prst" id="prsti" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
+                            <svg  onclick="myfunction('prst1')" class="prst" id="prst1" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-thumb-up" width="30" height="30" viewBox="0 0 24 24" stroke-width="0.5" stroke="#2c3e50" style="fill: black;" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3" />
                             </svg> 
@@ -173,5 +173,15 @@
         <footer style="background-color:  #dc0701;  color:var(--zuta);">
             Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
         </footer>
+        <script>
+            function myfunction(a ){
+                if (document.getElementById(a).style.fill === "white"){
+                    document.getElementById(a).style.fill="black";
+                }else{
+                    document.getElementById(a).style.fill="white";
+                }
+                
+            }
+        </script>
     </body>
 </html>
