js login complete

--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -15,7 +15,7 @@
 
         <script src="java/zablog.js"></script>
     </head>
-    <body>
+    <body  onload="provera()">
         <header class="glava flex">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
@@ -183,5 +183,7 @@
                 
             }
         </script>
+
+        <script src="proveraLogina.js"></script>
     </body>
 </html>
