--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body background="../Frontend/images/indeks.jpg">
+<body background="../Frontend/images/indeks.jpg"  onload="provera()">
   <header class="glava flex">
 
     <a href="index.html" class="LinkHome">
@@ -129,6 +129,8 @@
       setTimeout(showSlides, 7000); // Change image every 2 seconds
     }
   </script>
+
+  <script src="proveraLogina.js"></script>
 </body>
 
 </html>
