--- a/Frontend/preporuka.html
+++ b/Frontend/preporuka.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/zapreporuku.css">
         
     </head>
-    <body>
+    <body  onload="provera()">
         <header class="glava flex">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
@@ -108,5 +108,6 @@
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
+<script src="proveraLogina.js"></script>
     </body>
 </html>
