--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/zaaboutus.css">
     </head>
-    <body>
+    <body  onload="provera()">
         <header class="glava flex">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
@@ -85,5 +85,7 @@
   <footer style="background-color:  #dc0701; color:var(--zuta);">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
+
+<script src="proveraLogina.js"></script>
     </body>
 </html>
