--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -181,13 +181,13 @@
                            
 
                             <label for="pr" class="nass"> Priprema: </label>
-                            <textarea  id="pr " cols="30" rows="4" class="area"></textarea> 
+                            <textarea  id="pr " cols="30" rows="3" class="area"></textarea> 
                         </form>
                 </div>
                
         </div>
 
-        <footer style="background-color:  #dc0701;  color:var(--zuta);">
+        <footer style="background-color:  #dc0701;  color:var(--zuta); z-index: 99999999;">
             Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
         </footer>
         <script>
