--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -193,8 +193,8 @@
         <script>
             function myfunction(a ){
                 if (document.getElementById(a).style.fill === "white"){
-                    setr
-                    //document.getElementById(a).style.fill="black";
+                    
+                    document.getElementById(a).style.fill="black";
                 }else{
                     document.getElementById(a).style.fill="white";
                 }
