--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -82,7 +82,7 @@
         <i>-Vladimir Putin, 2021</i>
        </div>
        </div>>
-  <footer style="background-color:  #dc0701; color:var(--zuta);">
+  <footer style="background-color:  #dc0701; color:var(--zuta); bottom: 0; position: absolute; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
