--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -105,7 +105,7 @@
                
         </div>
 
-        <footer style="background-color:  #dc0701;  color:var(--zuta); z-index: 99999999;">
+        <footer style="background-color:  #dc0701;  color:var(--zuta); z-index: 99999999; bottom: 0; position: absolute; width: 100%;">
             Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
         </footer>
         <script>
