--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -101,7 +101,7 @@
   </div>
   </div>
 <br>
-  <footer style="background-color:  #dc0701;  color:var(--zuta);">
+  <footer style="background-color:  #dc0701;  color:var(--zuta); position: absolute; bottom: 0; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
