js blog add autorizacija

--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -15,7 +15,7 @@
 
         <script src="java/zablog.js"></script>
     </head>
-    <body  onload="provera();blogGet();">
+    <body  onload="prikaziBlogAdd();blogGet();">
         <header class="glava flex">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
@@ -58,7 +58,7 @@
         <div class="loading" ></div>
         <div class="kardkont" >
 
-            <div class="card plus" id="card plus" style="display: none;">
+            <div class="card plus" id="card-plus" style="display: none;">
                 <form action="" class="forma12 flex" onsubmit="addBlog(event)">
                    
                     <button class="zadod" >
