--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -64,13 +64,13 @@
         </div>
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="../Frontend/images/pozadina.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+          <img src="../Frontend/images/bazfud2.jpg" style="width:100%; height: 500px;     vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <img src="../Frontend/images/card1.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+          <img src="../Frontend/images/bazfud3.jpg" style="width:100%; height: 500px;     vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
@@ -101,7 +101,7 @@
   </div>
   </div>
 <br>
-  <footer style="background-color:  #dc0701;  color:var(--zuta); position: absolute; bottom: 0; width: 100%;">
+  <footer style="background-color:  #dc0701;  color:var(--zuta); position: relative; bottom: 0; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
