--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body background="../Frontend/images/indeks.jpg"  onload="provera()">
+<body background="./images/indeks.jpg"  onload="provera()">
   <header class="glava flex">
 
     <a href="index.html" class="LinkHome">
@@ -58,19 +58,19 @@
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext">1 / 3</div>
-          <img src="../Frontend/images/bazfud.jpg" style="width:100%; height: 500px;    vertical-align: middle;
+          <img src="./images/bazfud.jpg" style="width:100%; height: 500px;    vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
         <div class="mySlides fade">
           <div class="numbertext">2 / 3</div>
-          <img src="../Frontend/images/bazfud2.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+          <img src="./images/bazfud2.jpg" style="width:100%; height: 500px;     vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
         <div class="mySlides fade">
           <div class="numbertext">3 / 3</div>
-          <img src="../Frontend/images/bazfud3.jpg" style="width:100%; height: 500px;     vertical-align: middle;
+          <img src="./images/bazfud3.jpg" style="width:100%; height: 500px;     vertical-align: middle;
                       border-radius: 15px;">
           <div class="text"></div>
         </div>
