aha aha oho oha

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -43,9 +43,9 @@
             </nav>
         </header>
         <div class="kontejner">
-    <br><br><br><br><br><br><br>    
+    <br><br><br><br><br><br><br>  
        <div class="idegasamongas">
-        Kompanija Buzzfood je osnovana 2021. sa jednim ciljem,
+        <h2>Kompanija Buzzfood je osnovana 2021.</h2> Sa jednim ciljem,
         a to je <strike>svetska dominacija</strike> pomaganje ljudima sa njihovim najvecim problemom.
         Sta ce da jedu! Da li ste znali da ljudi godisnje potrose 342 sata
         razmisljajuci o tome sta ce i gde da jedu. Za tih 342 sata oni
@@ -53,7 +53,7 @@
         Zato smo mi tu! Cilj nase kompanije je da Vam vrati to izgubljeno vreme.
         Osim toga bavimo se i humanitarnim radom i vredni smo i odgovorni clanovi drustva.
         Nase usluge su besplatne i takve ce i ostati. 
-        Jedini nacin zarade koji imamo trenutno je <strike> pljackanje penzionera na dan penzije</strike> 
+        Jedini nacin zarade koji imamo trenutno je <strike> pljackanje</strike> 
         prikupljanje dobrotvornih donacija od cega 100% uplacenog novca ide u dobrotvorne svrhe. 
         
         <br><br>
@@ -81,8 +81,10 @@
         i svake godine donira 100% svoje zarade u dobrotvorne svrhe.<br>
         <i>-Vladimir Putin, 2021</i>
        </div>
-       </div>>
-  <footer style="background-color:  #dc0701; color:var(--zuta); bottom: 0; position: absolute; width: 100%;">
+       </div> 
+       <br>
+       <br>
+  <footer style="background-color:  #dc0701; color:var(--zuta); z-index: 0; bottom: 0; position: relative; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
