--- a/Frontend/blog.html
+++ b/Frontend/blog.html
@@ -16,7 +16,7 @@
         <script src="java/zablog.js"></script>
     </head>
     <body  onload="prikaziBlogAdd();blogGet();">
-        <header class="glava flex">
+        <header class="glava flex" style="z-index: 999999999;">
 
             <a href="index.html" class="LinkHome" > <div class="logo flex">
                 
