--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -84,7 +84,7 @@
        </div> 
        <br>
        <br>
-  <footer style="background-color:  #dc0701; color:var(--zuta); z-index: 0; bottom: 0; position: relative; width: 100%;">
+  <footer style="background-color:  #dc0701; color:var(--zuta); z-index: 0; bottom: 0; position: fixed; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
