--- a/Frontend/preporuka.html
+++ b/Frontend/preporuka.html
@@ -104,7 +104,7 @@
 </div>
 
 
-  <footer style="background-color:  #dc0701; color:var(--zuta); position: absolute; bottom: 0%; width: 100%;">
+  <footer style="background-color:  #dc0701; color:var(--zuta); position: fixed; bottom: 0%; width: 100%;">
     Hakerovi neprijatelji © 2021. <small><a href="../Frontend/uslovi.txt">Uslovi koriscenja</a></small>
 </footer>
 
